[package]
name = "uplink-android"
version = "0.1.0"
edition = "2021"

[dependencies]
figment = { version = "0.10.6", features = ["toml", "json"] }
flume = "0.10.9"
jni = "0.19.0"
jni-sys = "0.3"
anyhow = "1.0.58"
log = "0.4"
log-panics = "2.0"
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }
uplink = { git = "https://github.com/bmcpt/uplink", branch = "android_adjustments" }

[lib]
name = "uplink_android"
crate-type = ["lib", "cdylib"]

[build-dependencies]
flapigen = "0.6.0-pre7"

[profile.dev]
opt-level = 1
debug = false
strip = true
panic = "unwind"
