[package]
name = "uplink-android"
version = "0.1.0"
edition = "2021"

[dependencies]
flume = "0.10.9"
jni = "0.19.0"
jni-sys = "0.3"
anyhow = "1.0.58"
serde_json = "1.0.81"
serde = "1.0.137"
log = "0.4"
android_logger = "0.11.0"
log-panics = "2.0"
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }
uplink = { git = "https://github.com/bmcpt/uplink", branch = "android_adjustments" }

[lib]
name = "uplink_android"
crate-type = ["lib", "cdylib"]

[profile.dev]
opt-level = 1
debug = true
strip = true
panic = "unwind"
