[package]
name = "uplink-android"
version = "0.1.0"
edition = "2021"

[patch.crates-io]
serial = { git = "https://github.com/bytebeamio/serial-rs", branch = "android_fix" }

[dependencies]
flume = "0.10.9"
jni = "0.19.0"
jni-sys = "0.3"
anyhow = "1.0.58"
regex = "1.6.0"
serde_json = "1.0.81"
serde = "1.0.137"
log = "0.4"
android_logger = "0.11.0"
log-panics = "2.0"
lazy_static = "1.4.0"
chrono = "0.4.19"
tokio = { version = "1", features = ["full"] }
uplink = { git = "https://github.com/bytebeamio/uplink", branch = "android_pty" }

[lib]
name = "uplink_android"
crate-type = ["lib", "cdylib"]

[profile.dev]
opt-level = 1
debug = true
strip = true
panic = "unwind"
