[package]
name = "utilities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
time = "0.3.17"
regex = "1.7.0"
lazy_static = "1.4.0"

[profile.dev]
opt-level = 1
debug = true
strip = true
panic = "unwind"

[profile.release]
opt-level = "s"
strip = true
panic = "unwind"
